--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -293,13 +293,13 @@ Hero
 }
 .fixed {
   position: fixed;
-  background-color: rgba(55, 36, 40, .88);
+  background-color: rgba(10, 172, 194, 0.863);
   z-index: 999;
   width: 100%;
 }
 header {
   padding: 50px 0;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+  border-bottom: solid 1px rgba(10, 172, 194, 0.863);
   position: relative;
   width: 1170px;
   margin: 0 auto;
@@ -318,7 +318,7 @@ header {
     display: inline-block;
   }
   .logo img {
-    height: 19px;
+    height: 25px;
   }
   ul.primary-nav {
     margin: 0 0 0 75px;
