Fix button color

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -372,6 +372,15 @@ header {
   transform: translateX(-50%);
 }
 
+.btn-rsvp
+{
+  color: $txt-light;
+
+  &:hover {
+    color: $accent-color;
+  }
+}
+
 /* ==========================================================================
 Social share buttons
 ========================================================================== */
